# TutorAI

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  PROJECT_ANALYSIS.md  README.md  app.py  main.py  pyproject.toml  run.py  run_tests.py
docs/: AI_INTEGRATION_FEATURES.md  API.md  CODE_OF_CONDUCT.md  ENHANCED_ADAPTIVE_LEARNING_GEMINI.md  FIXES_SUMMARY.md  GRADIO_THEME_COLOR_FIXES.md  NEW_ADAPTIVE_LEARNING_README.md  UI_UX_ENHANCEMENTS.md  UI_UX_IMPROVEMENTS_SUMMARY.md  mcp.md  prd.md  sdk.md
mcp_server/: mcp_instance.py  server.py
mcp_server/model/: gemini_flash.py
mcp_server/resources/: concept_graph.py  curriculum_standards.py
mcp_server/tools/: ai_tutor_tools.py  concept_tools.py  content_generation_tools.py  interaction_tools.py  learning_path_tools.py  lesson_tools.py  ocr_tools.py  quiz_tools.py
tests/: test_client.py  test_mcp_server.py  test_tools_integration.py  test_utils.py
